[package]
name = "test-bgp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.25"
prost = "0.11.3"
prost-types = "0.11.2"
protobuf = "3.2.0"
tokio = { version = "1.23.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.11"
tonic = { version = "0.8.3", features = ["transport"] }

[build-dependencies]
tonic-build = "0.8.4"


[[bin]]
name = "gobgp-testcall"
path = "src/client.rs"

[[bin]]
name = "gobgp-teststreamcall"
path = "src/client-stream.rs"
